--- a/libs/Ribbon/LightStyle.css
+++ b/libs/Ribbon/LightStyle.css
@@ -1,5 +1,25 @@
+/*
+ * Copyright (C) 2020 Adrian Carpenter
+ *
+ * https://github.com/fizzyade
+ *
+ * This program is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation, either version 3 of the License, or
+ * (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program.  If not, see <http://www.gnu.org/licenses/>.
+ */
+
 QWidget {
     font-family: "Open Sans";
+    font-size: 10pt;
 }
 
 QPushButton {
@@ -13,9 +33,73 @@ QToolButton {
 }
 
 QToolButton::hover {
-    background: rgb(209, 198, 197)
+    background: #d1c6c5;
 }
 
 QPushButton::hover {
-    background: rgb(209, 198, 197)
+    background: #d1c6c5;
+}
+
+QComboBox {
+    padding: 2px;
+    height:13px;
+    border: 1px solid #B9B9B9;
+}
+
+QComboBox:!editable {
+    background-color: #ffffff;
+}
+
+QComboBox::drop-down:button {
+    background-color: #ffffff;
+}
+
+QComboBox::down-arrow {
+    background-color: #ffffff;
+    image: url(':/Nedrysoft/Ribbon/icons/arrow_drop-dark@2x.png');
+    width: 5px;
+    height: 4px;
+}
+
+QComboBox::down-arrow:hover {
+    background-color: #f5f5f5;
+}
+
+QLineEdit {
+    background-color: #FFFFFF;
+    height:13px;
+    border: 1px solid #B9B9B9;
+    padding: 2px;
+}
+
+QLineEdit:focus {
+    border-color: #B9B9B9;
+}
+
+QCheckBox::indicator:checked {
+    image: url(':/Nedrysoft/Ribbon/icons/checked-light@2x.png');
+    width: 14px;
+    height: 14px;
+    padding-right:2px;
+}
+
+QCheckBox::indicator:checked:hover {
+    image: url(':/Nedrysoft/Ribbon/icons/checked-hover-light@2x.png');
+    width: 14px;
+    height: 14px;
+    padding-right:2px;
+}
+
+QCheckBox::indicator:unchecked {
+    image: url(':/Nedrysoft/Ribbon/icons/unchecked-light@2x.png');
+    width: 14px;
+    height: 14px;
+    padding-right:2px;
+}
+
+QCheckBox::indicator:unchecked:hover {
+    image: url(':/Nedrysoft/Ribbon/icons/unchecked-hover-light@2x.png');
+    width: 14px;
+    height: 14px;
+    padding-right:2px;
 }
