--- a/src/MainWindow.ui
+++ b/src/MainWindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
-    <height>600</height>
+    <width>954</width>
+    <height>696</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -33,7 +33,7 @@
     <item>
      <widget class="Nedrysoft::Ribbon::RibbonWidget" name="ribbonWidget">
       <property name="currentIndex">
-       <number>0</number>
+       <number>2</number>
       </property>
       <widget class="QWidget" name="homeRibboonPage">
        <attribute name="title">
@@ -80,10 +80,10 @@
           </property>
           <layout class="QGridLayout" name="gridLayout_3">
            <property name="leftMargin">
-            <number>12</number>
+            <number>0</number>
            </property>
            <property name="topMargin">
-            <number>6</number>
+            <number>0</number>
            </property>
            <property name="rightMargin">
             <number>0</number>
@@ -95,7 +95,7 @@
             <widget class="Nedrysoft::Ribbon::RibbonButton" name="loadButton">
              <property name="icon">
               <iconset resource="app.qrc">
-               <normaloff>:/assets/load.png</normaloff>:/assets/load.png</iconset>
+               <normaloff>:/icons/load.png</normaloff>:/icons/load.png</iconset>
              </property>
              <property name="text">
               <string>Load</string>
@@ -106,7 +106,7 @@
             <widget class="Nedrysoft::Ribbon::RibbonButton" name="newButton">
              <property name="icon">
               <iconset resource="app.qrc">
-               <normaloff>:/assets/add.png</normaloff>:/assets/add.png</iconset>
+               <normaloff>:/icons/add.png</normaloff>:/icons/add.png</iconset>
              </property>
              <property name="text">
               <string>New</string>
@@ -117,7 +117,7 @@
             <widget class="Nedrysoft::Ribbon::RibbonButton" name="SaveButton">
              <property name="icon">
               <iconset resource="app.qrc">
-               <normaloff>:/assets/save.png</normaloff>:/assets/save.png</iconset>
+               <normaloff>:/icons/save.png</normaloff>:/icons/save.png</iconset>
              </property>
              <property name="text">
               <string>Save</string>
@@ -228,6 +228,12 @@
            </item>
            <item row="4" column="1">
             <widget class="QLabel" name="minFeatureSliderLabel">
+             <property name="sizePolicy">
+              <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
+               <horstretch>0</horstretch>
+               <verstretch>0</verstretch>
+              </sizepolicy>
+             </property>
              <property name="font">
               <font>
                <family>Open Sans</family>
@@ -254,6 +260,12 @@
            </item>
            <item row="1" column="1">
             <widget class="QCheckBox" name="featureAutoDetectCheckbox">
+             <property name="sizePolicy">
+              <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+               <horstretch>0</horstretch>
+               <verstretch>0</verstretch>
+              </sizepolicy>
+             </property>
              <property name="font">
               <font>
                <family>Open Sans</family>
@@ -296,7 +308,7 @@
             <number>0</number>
            </property>
            <property name="topMargin">
-            <number>6</number>
+            <number>0</number>
            </property>
            <property name="rightMargin">
             <number>0</number>
@@ -309,9 +321,15 @@
            </property>
            <item row="0" column="0">
             <widget class="Nedrysoft::Ribbon::RibbonDropButton" name="designFilesAddButton">
+             <property name="sizePolicy">
+              <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
+               <horstretch>0</horstretch>
+               <verstretch>0</verstretch>
+              </sizepolicy>
+             </property>
              <property name="icon">
               <iconset resource="app.qrc">
-               <normaloff>:/assets/add.png</normaloff>:/assets/add.png</iconset>
+               <normaloff>:/icons/add.png</normaloff>:/icons/add.png</iconset>
              </property>
             </widget>
            </item>
@@ -321,10 +339,16 @@
         <item>
          <widget class="Nedrysoft::Ribbon::RibbonGroup" name="iconsRibbonGroup">
           <property name="sizePolicy">
-           <sizepolicy hsizetype="MinimumExpanding" vsizetype="Preferred">
+           <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
             <horstretch>0</horstretch>
             <verstretch>0</verstretch>
            </sizepolicy>
+          </property>
+          <property name="minimumSize">
+           <size>
+            <width>0</width>
+            <height>0</height>
+           </size>
           </property>
           <property name="maximumSize">
            <size>
@@ -337,7 +361,7 @@
           </property>
           <layout class="QVBoxLayout" name="verticalLayout_3">
            <property name="spacing">
-            <number>12</number>
+            <number>8</number>
            </property>
            <property name="leftMargin">
             <number>0</number>
@@ -445,12 +469,101 @@
          </widget>
         </item>
         <item>
-         <widget class="Nedrysoft::Ribbon::RibbonGroup" name="gridRibbonGroup">
+         <widget class="Nedrysoft::Ribbon::RibbonGroup" name="textRibbonGroup">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
             <horstretch>0</horstretch>
             <verstretch>0</verstretch>
            </sizepolicy>
+          </property>
+          <property name="minimumSize">
+           <size>
+            <width>160</width>
+            <height>0</height>
+           </size>
+          </property>
+          <property name="groupName">
+           <string>Text</string>
+          </property>
+          <layout class="QGridLayout" name="gridLayout_5">
+           <property name="sizeConstraint">
+            <enum>QLayout::SetDefaultConstraint</enum>
+           </property>
+           <property name="leftMargin">
+            <number>0</number>
+           </property>
+           <property name="topMargin">
+            <number>6</number>
+           </property>
+           <property name="rightMargin">
+            <number>0</number>
+           </property>
+           <property name="bottomMargin">
+            <number>6</number>
+           </property>
+           <item row="0" column="0">
+            <layout class="QFormLayout" name="formLayout_2">
+             <property name="sizeConstraint">
+              <enum>QLayout::SetMinimumSize</enum>
+             </property>
+             <property name="fieldGrowthPolicy">
+              <enum>QFormLayout::AllNonFixedFieldsGrow</enum>
+             </property>
+             <property name="verticalSpacing">
+              <number>8</number>
+             </property>
+             <item row="0" column="0">
+              <widget class="QLabel" name="fonSizeLabel">
+               <property name="text">
+                <string>Size</string>
+               </property>
+              </widget>
+             </item>
+             <item row="0" column="1">
+              <widget class="Nedrysoft::Ribbon::RibbonLineEdit" name="fontSizeLineEdit">
+               <property name="sizePolicy">
+                <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+                 <horstretch>0</horstretch>
+                 <verstretch>0</verstretch>
+                </sizepolicy>
+               </property>
+              </widget>
+             </item>
+             <item row="1" column="0">
+              <widget class="QLabel" name="positionLabel">
+               <property name="text">
+                <string>Position:</string>
+               </property>
+              </widget>
+             </item>
+             <item row="1" column="1">
+              <widget class="QComboBox" name="positionComboBox">
+               <property name="sizePolicy">
+                <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+                 <horstretch>0</horstretch>
+                 <verstretch>0</verstretch>
+                </sizepolicy>
+               </property>
+              </widget>
+             </item>
+            </layout>
+           </item>
+          </layout>
+         </widget>
+        </item>
+        <item>
+         <widget class="Nedrysoft::Ribbon::RibbonGroup" name="gridRibbonGroup">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Minimum" vsizetype="MinimumExpanding">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="minimumSize">
+           <size>
+            <width>0</width>
+            <height>0</height>
+           </size>
           </property>
           <property name="maximumSize">
            <size>
@@ -463,7 +576,7 @@
           </property>
           <layout class="QVBoxLayout" name="verticalLayout_2">
            <property name="spacing">
-            <number>12</number>
+            <number>8</number>
            </property>
            <property name="leftMargin">
             <number>0</number>
@@ -653,7 +766,7 @@
             <number>0</number>
            </property>
            <property name="topMargin">
-            <number>6</number>
+            <number>0</number>
            </property>
            <property name="rightMargin">
             <number>0</number>
@@ -664,7 +777,7 @@
            <item>
             <layout class="QHBoxLayout" name="horizontalLayout_5">
              <item>
-              <widget class="QPushButton" name="buildButton">
+              <widget class="Nedrysoft::Ribbon::RibbonButton" name="buildButton">
                <property name="sizePolicy">
                 <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
                  <horstretch>0</horstretch>
@@ -683,12 +796,9 @@
                  <height>64</height>
                 </size>
                </property>
-               <property name="text">
-                <string/>
-               </property>
                <property name="icon">
                 <iconset resource="app.qrc">
-                 <normaloff>:/assets/build.png</normaloff>:/assets/build.png</iconset>
+                 <normaloff>:/icons/build.png</normaloff>:/icons/build.png</iconset>
                </property>
                <property name="iconSize">
                 <size>
@@ -696,8 +806,8 @@
                  <height>48</height>
                 </size>
                </property>
-               <property name="flat">
-                <bool>true</bool>
+               <property name="text">
+                <string/>
                </property>
               </widget>
              </item>
@@ -773,7 +883,7 @@
               <number>-1</number>
              </property>
              <property name="verticalSpacing">
-              <number>12</number>
+              <number>8</number>
              </property>
              <item row="0" column="0">
               <widget class="QLabel" name="formatComboBoxLabel">
@@ -869,7 +979,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>800</width>
+     <width>954</width>
      <height>24</height>
     </rect>
    </property>
