--- a/src/MainWindow.ui
+++ b/src/MainWindow.ui
@@ -92,7 +92,7 @@
             <number>6</number>
            </property>
            <item row="0" column="1">
-            <widget class="Nedrysoft::Ribbon::RibbonButton" name="loadButton">
+            <widget class="Nedrysoft::Ribbon::RibbonPushButton" name="loadButton">
              <property name="icon">
               <iconset resource="app.qrc">
                <normaloff>:/icons/load.png</normaloff>:/icons/load.png</iconset>
@@ -103,7 +103,7 @@
             </widget>
            </item>
            <item row="0" column="0">
-            <widget class="Nedrysoft::Ribbon::RibbonButton" name="newButton">
+            <widget class="Nedrysoft::Ribbon::RibbonPushButton" name="newButton">
              <property name="icon">
               <iconset resource="app.qrc">
                <normaloff>:/icons/add.png</normaloff>:/icons/add.png</iconset>
@@ -114,7 +114,7 @@
             </widget>
            </item>
            <item row="0" column="2">
-            <widget class="Nedrysoft::Ribbon::RibbonButton" name="SaveButton">
+            <widget class="Nedrysoft::Ribbon::RibbonPushButton" name="SaveButton">
              <property name="icon">
               <iconset resource="app.qrc">
                <normaloff>:/icons/save.png</normaloff>:/icons/save.png</iconset>
@@ -777,7 +777,7 @@
            <item>
             <layout class="QHBoxLayout" name="horizontalLayout_5">
              <item>
-              <widget class="Nedrysoft::Ribbon::RibbonButton" name="buildButton">
+              <widget class="Nedrysoft::Ribbon::RibbonPushButton" name="buildButton">
                <property name="sizePolicy">
                 <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
                  <horstretch>0</horstretch>
@@ -1042,9 +1042,9 @@
    <container>1</container>
   </customwidget>
   <customwidget>
-   <class>Nedrysoft::Ribbon::RibbonButton</class>
+   <class>Nedrysoft::Ribbon::RibbonPushButton</class>
    <extends>QWidget</extends>
-   <header>Ribbon/RibbonButton.h</header>
+   <header>Ribbon/RibbonPushButton.h</header>
    <container>1</container>
   </customwidget>
   <customwidget>
