--- a/src/MainWindow.ui
+++ b/src/MainWindow.ui
@@ -14,10 +14,7 @@
    <string>dmge²</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <layout class="QVBoxLayout" name="verticalLayout">
-    <property name="spacing">
-     <number>0</number>
-    </property>
+   <layout class="QGridLayout" name="gridLayout_7">
     <property name="leftMargin">
      <number>0</number>
     </property>
@@ -30,10 +27,16 @@
     <property name="bottomMargin">
      <number>0</number>
     </property>
-    <item>
+    <property name="horizontalSpacing">
+     <number>0</number>
+    </property>
+    <property name="verticalSpacing">
+     <number>1</number>
+    </property>
+    <item row="0" column="0">
      <widget class="Nedrysoft::Ribbon::RibbonWidget" name="ribbonWidget">
       <property name="currentIndex">
-       <number>2</number>
+       <number>1</number>
       </property>
       <widget class="QWidget" name="homeRibboonPage">
        <attribute name="title">
@@ -376,7 +379,7 @@
             <number>0</number>
            </property>
            <item>
-            <layout class="QHBoxLayout" name="horizontalLayout_10">
+            <layout class="QHBoxLayout" name="iconsSizeLayout">
              <property name="sizeConstraint">
               <enum>QLayout::SetMinimumSize</enum>
              </property>
@@ -430,7 +433,7 @@
             </layout>
            </item>
            <item>
-            <layout class="QHBoxLayout" name="horizontalLayout_4">
+            <layout class="QHBoxLayout" name="showIconsLayout">
              <property name="sizeConstraint">
               <enum>QLayout::SetMinimumSize</enum>
              </property>
@@ -453,7 +456,7 @@
             </layout>
            </item>
            <item>
-            <spacer name="verticalSpacer_3">
+            <spacer name="iconsSpacer">
              <property name="orientation">
               <enum>Qt::Vertical</enum>
              </property>
@@ -502,7 +505,7 @@
             <number>6</number>
            </property>
            <item row="0" column="0">
-            <layout class="QFormLayout" name="formLayout_2">
+            <layout class="QFormLayout" name="textFormLayout">
              <property name="sizeConstraint">
               <enum>QLayout::SetMinimumSize</enum>
              </property>
@@ -856,7 +859,7 @@
             <number>12</number>
            </property>
            <item row="2" column="0">
-            <spacer name="verticalSpacer_4">
+            <spacer name="optionsSpacer">
              <property name="orientation">
               <enum>Qt::Vertical</enum>
              </property>
@@ -962,14 +965,70 @@
       </widget>
      </widget>
     </item>
-    <item>
-     <widget class="Nedrysoft::PreviewWidget" name="previewWidget" native="true">
-      <property name="sizePolicy">
-       <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-        <horstretch>0</horstretch>
-        <verstretch>0</verstretch>
-       </sizepolicy>
+    <item row="1" column="0">
+     <widget class="QSplitter" name="mainSplitter">
+      <property name="orientation">
+       <enum>Qt::Vertical</enum>
       </property>
+      <property name="handleWidth">
+       <number>3</number>
+      </property>
+      <property name="childrenCollapsible">
+       <bool>false</bool>
+      </property>
+      <widget class="Nedrysoft::PreviewWidget" name="previewWidget" native="true">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+      </widget>
+      <widget class="QTabWidget" name="tabWidget">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Expanding" vsizetype="MinimumExpanding">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="maximumSize">
+        <size>
+         <width>16777215</width>
+         <height>150</height>
+        </size>
+       </property>
+       <property name="tabShape">
+        <enum>QTabWidget::Rounded</enum>
+       </property>
+       <property name="currentIndex">
+        <number>0</number>
+       </property>
+       <property name="documentMode">
+        <bool>true</bool>
+       </property>
+       <widget class="QWidget" name="consoleTab">
+        <attribute name="title">
+         <string>Console</string>
+        </attribute>
+        <layout class="QGridLayout" name="gridLayout_6">
+         <property name="leftMargin">
+          <number>0</number>
+         </property>
+         <property name="topMargin">
+          <number>0</number>
+         </property>
+         <property name="rightMargin">
+          <number>0</number>
+         </property>
+         <property name="bottomMargin">
+          <number>0</number>
+         </property>
+         <item row="0" column="0">
+          <widget class="Nedrysoft::HTermWidget" name="terminalWidget" native="true"/>
+         </item>
+        </layout>
+       </widget>
+      </widget>
      </widget>
     </item>
    </layout>
@@ -1005,24 +1064,6 @@
   </action>
  </widget>
  <customwidgets>
- <customwidget>
-   <class>Nedrysoft::Ribbon::RibbonComboBox</class>
-   <extends>QComboBox</extends>
-   <header>Ribbon/RibbonComboBox.h</header>
-   <container>1</container>
-  </customwidget> 
-  <customwidget>
-   <class>Nedrysoft::Ribbon::RibbonCheckBox</class>
-   <extends>QCheckBox</extends>
-   <header>Ribbon/RibbonCheckBox.h</header>
-   <container>1</container>
-  </customwidget> 
-  <customwidget>
-   <class>Nedrysoft::Ribbon::RibbonSlider</class>
-   <extends>QSlider</extends>
-   <header>Ribbon/RibbonSlider.h</header>
-   <container>1</container>
-  </customwidget> 
   <customwidget>
    <class>Nedrysoft::Ribbon::RibbonGroup</class>
    <extends>QWidget</extends>
@@ -1054,9 +1095,33 @@
    <container>1</container>
   </customwidget>
   <customwidget>
+   <class>Nedrysoft::Ribbon::RibbonComboBox</class>
+   <extends>QComboBox</extends>
+   <header>Ribbon/RibbonComboBox.h</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>Nedrysoft::Ribbon::RibbonCheckBox</class>
+   <extends>QCheckBox</extends>
+   <header>Ribbon/RibbonCheckBox.h</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>Nedrysoft::Ribbon::RibbonSlider</class>
+   <extends>QSlider</extends>
+   <header>Ribbon/RibbonSlider.h</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
    <class>Nedrysoft::PreviewWidget</class>
    <extends>QWidget</extends>
    <header>PreviewWidget.h</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>Nedrysoft::HTermWidget</class>
+   <extends>QWidget</extends>
+   <header>HTermWidget.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
