wip: context menu + refactoring
terminal context menu now works, options to clear the terminal or copy the output.
MainWIndow has had substantial refactoring, lambda expressions are now member functions where it makes more sense, code is cleaner.

--- a/src/app.qrc
+++ b/src/app.qrc
@@ -28,5 +28,10 @@
         <file>../images/spinner-dark.gif</file>
         <file>../images/spinner-light.gif</file>
         <file>../images/loading.gif</file>
+
+        <file>../icons/copy-dark@2x.png</file>
+        <file>../icons/copy-light@2x.png</file>
+        <file>../icons/trash-dark@2x.png</file>
+        <file>../icons/trash-light@2x.png</file>
     </qresource>
 </RCC>
