wip: settings dialog
added settings dialog (currently a working placeholder)

--- a/src/MainWindow.ui
+++ b/src/MainWindow.ui
@@ -1157,6 +1157,7 @@
     </property>
     <addaction name="actionQuit"/>
     <addaction name="actionAbout"/>
+    <addaction name="actionPreferences"/>
    </widget>
    <addaction name="menuFile"/>
   </widget>
@@ -1169,6 +1170,11 @@
   <action name="actionAbout">
    <property name="text">
     <string>About</string>
+   </property>
+  </action>
+  <action name="actionPreferences">
+   <property name="text">
+    <string>Preferences...</string>
    </property>
   </action>
  </widget>
